# chatbot_tg

./: .dockerignore  .gitignore  Dockerfile  README.md  devREADME.md  docker-compose.yaml  docker-compose.yml  form.pptx  pyproject.toml
Elasticsearch/: index.json  synonym.txt
Elasticsearch/document/: get_tgday_service.json  tgday_service.json  upload_workreport.json
alembic/: env.py
alembic/versions/: 05173f5ab0bc_users_field_업데이트.py  30b7ed852d08_users_database.py  98aef1eeadc5_tgday_테이블_추가.py  9cd15da05631_team_테이블_추가.py  cd28b9c7eb70_tgday_user_id정보_user_테이블로_이관.py  d392eca656ec_smtp_데이터베이스.py
app/: main.py
app/abstract/: connAbstract.py
app/connection/: elasticsearch.py  redis.py  smtp.py
app/core/: config.py  scheduler_server.py  server.py  userinfo.py
app/schedulerGroup/: messageGroup.py
app/service/: chatbotService.py  controllRoominfo.py  elasticsearch.py  parsing.py  redis.py  smtp.py  team.py  tgday.py  tgdayDb.py  tgday_db.py  user.py  webex.py  workReport.py
app/util/: controllRoominfo.py  createDate.py  elasticsearch.py  parsing.py  redis.py  smtp.py  smtpMessage.py  webex.py
chatbot_tg/: main.py
chatbot_tg/abstract/: connAbstract.py
chatbot_tg/connection/: conn_avbstract.py  elastic.py  elasticsearch.py  redis.py
chatbot_tg/core/: config.py  server.py
chatbot_tg/service/: chatbotService.py  controllRoominfo.py  elasticsearch.py  redis.py  webex.py  webhook.py
infra/: docker-compose.yml
tests/connection/: test_elastic.py  test_redis.py  test_smtp.py
tests/service/: test_chatbotService.py  (+8 more)
workReport/: form.pptx
(+21 files in other folders)
